More formatting for ch25, added new 'memoryScene' macro

--- a/4T/ch25.tex
+++ b/4T/ch25.tex
@@ -21,9 +21,7 @@ A lot of intro text to scenes was scripted, perhaps Nate would be kind enough to
 
 My Adam has an honorary good quote for the night with, ``Wait, so \underline{  {\color[RGB]{17,85,204}they killed Kenney}  }\hl{?}\footnote{\textbf{Suko T }Ha! :) \textsubscript{05/28/14 12:20am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }OMG LULZ. :D \textsubscript{05/28/14 12:04pm}}``  
 
-
-\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}
-
+\jumpHeadline{}
 
 \jumpHeadline{At the start}
 
@@ -230,6 +228,7 @@ Little girl turns around with a pipe and advances on Hayley.  Hayley attempts to
 
 Jaya and Oliver are in the bunk.  Hayley and Jonah have just left.  The little girl is wandering around the bunk, touching things.
 
+\memoryScene{
 \textit{OLIVER: ``You don't forget the person who shoots you.''}
 
 \textit{JAYA: ``Really?''}
@@ -241,6 +240,8 @@ Jaya and Oliver are in the bunk.  Hayley and Jonah have just left.  The little g
 \textit{OLIVER: ``Really?  Even if we have to resort to unconventional methods?''}
 
 \textit{JAYA: (shrugs)  ``Whatever.  Do we have an agreement?''  (Both shake)}
+
+}
 
 Jaya then holds up a  finger in that classic ``One moment'' gesture and turns to suddenly punches the little girl in the face.  Oliver doesn't really notice.  She follows up with some kicks to the gut and turns to him to ask,  ``Who IS this?''
 
@@ -505,7 +506,7 @@ Hayley calms down a bit, ``Yes, thank you.  Is that swimming?  I don't like it.'
 ``You never did tell me what happened to you''
 
 ``Well I guess I can now... I guess she's not my contract holder... ``
-\sceneHeadline{\hl{ADAM's FUCKING PHONE RINGS}}\footnote{\textbf{Nathaniel Ford }The real reason Oliver perished. The writers hate interruptions! ;-) \textsubscript{06/01/14 11:35am}}
+\textbf{\hl{ADAM's FUCKING PHONE RINGS}}\footnote{\textbf{Nathaniel Ford }The real reason Oliver perished. The writers hate interruptions! ;-) \textsubscript{06/01/14 11:35am}}
 
 ``... yes, I guess I don't think that's a problem.  I trust you... when my contract was purchased from Redemarrer, I was in a brothel, I didn't do very well... Guys don't like being told that they're stupid or fat or old.''
 
@@ -617,8 +618,7 @@ Eventually he lands on the grenade, and at the last moment his mouth ticks up wi
 
 \jumpHeadline{ Memory : Kate in the rain} 
 
-
-
+\memoryScene{
 \textit{Oliver is walking down the street in Cardoza, and cloaked figure steps out to meet him.}
 
 \textit{OLIVER: ``Give me some warning next time!''}
@@ -632,7 +632,7 @@ Eventually he lands on the grenade, and at the last moment his mouth ticks up wi
 \textit{OLIVER: ``I'm touched by your concern, but especially after everything you've gone through, I'm surprised that you of all people...''}
 
 \textit{GERHAUSER: (reaches out a hand and gently touches his face) }
-
+}
 
 
 The bitchy little girl is there... and a shadowy figure.  Boxes knocked over. After much balking and cowering, the girls nominate Jonah to be the one to jump into Kate.
@@ -677,7 +677,7 @@ A bunch of scenes of Oliver saving Hayley.
 
 
 
-\textit{In one smooth motion, Oliver raises his gun, points it over Hayley's shoulder and pulls the trigger. A would-be attacker falls dead. Just as smoothly he slings the rifle and dives to grab Hayley's hand as she starts to fall down a shaft (that appears from no where). Even as he hauls her to her feet, he pulls her to one side and out of an explosion of gunfire launched by a tall, naked woman with ferocity in her eyes. The two of them land in a pile of corpses, where Jaya and Lackovich are also taking cover. A mortar is announced by it's signature whine, and an explosion goes off, sending everyone flying through the air. Oliver holds on to Hayley. Everyone lands against a wall and amidst shattered, dusty brown masonry. There is a small girl there, splayed against the wall just like the Patrol Group.}
+\memoryScene{\textit{In one smooth motion, Oliver raises his gun, points it over Hayley's shoulder and pulls the trigger. A would-be attacker falls dead. Just as smoothly he slings the rifle and dives to grab Hayley's hand as she starts to fall down a shaft (that appears from no where). Even as he hauls her to her feet, he pulls her to one side and out of an explosion of gunfire launched by a tall, naked woman with ferocity in her eyes. The two of them land in a pile of corpses, where Jaya and Lackovich are also taking cover. A mortar is announced by it's signature whine, and an explosion goes off, sending everyone flying through the air. Oliver holds on to Hayley. Everyone lands against a wall and amidst shattered, dusty brown masonry. There is a small girl there, splayed against the wall just like the Patrol Group.}}
 
 
 
@@ -725,6 +725,7 @@ Jaya snaps at the girl to leave and then makes the poor choice of trying to kick
 
 Oliver and Gerhauser are in the lab.  Oh, there's also the little girl... touching all the lab equipment. 
 
+\memoryScene{
 \textit{GERHAUSER: ``Did you ever keep a pet?''}
 
 \textit{OLIVER: ``Yes, a cat named Grey, I wasn't very creative.''}
@@ -788,7 +789,7 @@ Oliver and Gerhauser are in the lab.  Oh, there's also the little girl... touchi
 \textit{OLIVER: ``I agree, I'm trying to do something that matters, and I only have one thing to give.''}
 
 \textit{GERHAUSER: ``That is where I disagree with you.''}
-
+}
 Again there's balking, and Hayley is thrown into Kate.  Jonah tries to walk Hayley through it and she mentally shushes him.  
 
 ``Well, what else do I have to give anyway... well, you were right probably...'' says Oliver
@@ -920,7 +921,7 @@ Oliver runs after the Orc.
 \jumpHeadline{ Memory : Jaya in the Rain} 
 
 
-
+\memoryScene{
 \textit{Jaya kicks over some boxes to get Oliver's attention. A small girl continues to kick over boxes, and then other things, all which fade as they fall to the ground.}
 
 \textit{JAYA: ``Sorry I slugged you.'' (Pause) ``Not really.  We cool?''}
@@ -940,7 +941,7 @@ Oliver runs after the Orc.
 \textit{OLIVER:  ``Where did you get this?'' (chokes)}
 
 \textit{JAYA: ``Not at a Citizen's bar!'' (grins)}
-
+}
 
 
 ``Now don't freak out, ok?'' Jaya pulls out her gun.  ``I'm going to shoot you.  In the leg.  For the good of the team.''
@@ -1196,33 +1197,6 @@ Rebecca: I do the thing that my people tell me to do
  Proud: You are better than most, and are frustrated when they don't see it.}\footnote{\textbf{Rebecca S. }Damnit, I should have intercepted this one... \textsubscript{05/28/14 11:07pm}}
 
 
-
-
-
-
-
-
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Also, super-big thank you for taking notes!  Really let me stay more in Hayley's head, which was great for this session.  Much appreciated!, unable to correctly match (exceeded acceptable limit):ExpectedDisclaimer: I type phonetically when I type fast so forgive the typos/nonsense.  I also was trying to focus on the “Jaya” brain so some of the phrasing or word choice for non-dialog text is less than idea.
-
-	Unable to highlight for footnote: Hayley may, with her nose for breadcrumbs, eventually pick up that they were very deliberate in how they mortally wounded the victims. Each blow was as efficient as possible while ensuring death and maximizing time until death. Most people bled out, conscious. The fighters were hamstrung or otherwise disabled before being mortally wounded., unable to correctly match (exceeded acceptable limit):Expected“Legionnaires, start bringing me hearts“ -- the thought flashes through Hayley and Oliver’s minds.  Flashes of visions as well… People standing on the train platform, tall dudes from before, with big knives they start fucking up the weakling peoples (in Franchise clothing)… Mostly gutted and stabbed in the heart… not dying outright, long painful bleeding out process.  
-Hayley has an emotional reaction to the scene.  First indignation- “You don’t remove hearts like that!” and then sadness at the waste.
-
-Adam: You know that 10x10 is 100 right?
-Nate: But 9x9 is not.
-
-	Unable to highlight for footnote: Damnit, I should have intercepted this one..., unable to correctly match (exceeded acceptable limit):Expected“Citizen, First”
- Proud: You are better than most, and are frustrated when they don’t see it.
-
-
-\fi
 
 \vspace{\fill}
 
