--- a/4T/book2.tex
+++ b/4T/book2.tex
@@ -2,6 +2,7 @@
 \documentclass[10pt]{book}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{scrextend}
 \usepackage{pifont}
 \usepackage{soul}
 \usepackage{titlesec}
@@ -62,11 +63,21 @@
 \newcommand{\deets}[3][]{%
    {
    \parskip=0pt
-   
    \noindent\textit{Notes}: #2
    \\
    \noindent\textit{Date}:  ~#3
    }
+}
+\newcommand{\memoryScene}[2][] {
+ {
+ \parskip=0pt
+  \parindent=0pt
+  \leftmargin=5cm
+  \begin{addmargin}[3em]{0em}
+  ~\\
+  #2
+  \end{addmargin}
+ }
 }
 \begin{document}
 \pagestyle{mainmatter}
