fixed quotes for ch26

--- a/4T/ch26.tex
+++ b/4T/ch26.tex
@@ -1035,23 +1035,23 @@ As they stand to leave, the dossier has stopped scrolling.  Rook types something
 Rebecca: How many drugs will it take to get you to shut up?
 
 
-
+\quotedDialog{
 Ion: Is Jonah feeling anything from Jaya?
 
 Rebecca: You don't feel very happy.
 
 Ion: Is that different from how\textit{ I} am feeling?
 
-Rebecca: You want to hit someone.
+Rebecca: You want to hit someone.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rebecca: There's a whole table between Morgan and Hayley
 
-Suko: Won't make a difference.
+Suko: Won't make a difference.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Jaya: Rook!  Stone cold killer, man.  Fucking Morgan sent us in!  They knew.  Why did they do that?  They're just fucking with us!
 
 Hayley: No, it worked!  We found him.
@@ -1062,10 +1062,10 @@ Hayley: I know he's dead.
 
 Jaya: Okay good. He's gone.
 
-Hayley: I brought him back with me.
+Hayley: I brought him back with me.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rook: Is Agent Hayley in emotional distress?
 
 Jaya: Yes, she was crying.
@@ -1074,26 +1074,26 @@ Rook: Noted.
 
 Jaya: But, uh, don't spread that around.  Special circumstances, you understand.
 
-Rook: How very empathetic of you.
+Rook: How very empathetic of you.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Swan: Agent, may I ask you a question?
 
 Jaya: What?
 
 Swan: Did you just arm my patient?''
 
-Jaya: Oh, it's not loaded.
+Jaya: Oh, it's not loaded.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Micah: I heard a report of unauthorized weaponry in Medbay?
 
 Jaya: It was medicinal weaponry
 
 Micah: A rifle is not a tranq gun.
-
+}
 
 
 
