Adding ch27 basic (error free?)

--- a/4T/ch26.tex
+++ b/4T/ch26.tex
@@ -4,16 +4,9 @@
 
 
 
-\begin{center}
- {\LARGE \textbf{(SAC-09 Interlude)} } 
-\end{center}
+\subChapterTitle{(SAC-09 Interlude)} 
 
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} June 19th, 2014
+\deets{Suko}{June 19th, 2014}
 
 
 
