Minor quote cleanups

--- a/4T/ch27.tex
+++ b/4T/ch27.tex
@@ -1,24 +1,10 @@
 \setcounter{chapter}{ 26 }
-\chapter{\textbf{``Terminus Rising''} }
+\chapter{\textbf{``Terminus Rising'', part 1} }
 
 
+\subChapterTitle{``It's All Just Psychosomatic''} 
 
-
-\begin{center}
- {\LARGE \textbf{(part 1)} } 
-\end{center}
-
-
-\begin{center}
- {\LARGE \textbf{aka ``It's All Just Psychosomatic''} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} June 25th, 2014
+\deets{Suko}{June 25th, 2014}
 
 
 
@@ -754,12 +740,13 @@ Hayley 0
 
 \jumpHeadline{Quotes: }
 
+\quotedDialog{
 Jonah: My point is that they won't respect someone who has been on the front because they won't understand what that is like.
 
 Rook: Mr. Langdon should.  You may be able to connect to him over his personal loss.
 
 Jonah: You've never spoken to him, have you?
-
+}
 
 
 
