Ch28 quote and highlight cleanups

--- a/4T/ch28.tex
+++ b/4T/ch28.tex
@@ -1,24 +1,10 @@
 \setcounter{chapter}{ 27 }
-\chapter{\textbf{``Terminus Rising''} }
+\chapter{\textbf{``Terminus Rising'', part 2} }
 
 
+\subChapterTitle{``A Shocking Lack of Violence''} 
 
-
-\begin{center}
- {\LARGE \textbf{(part 2)} } 
-\end{center}
-
-
-\begin{center}
- {\LARGE \textbf{aka ``A Shocking Lack of Violence''} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} July 23rd, 2014
+\deets{Suko}{July 23rd, 2014}
 
 
 
@@ -652,7 +638,7 @@ Marechenko holds out a small handheld device.  ``You have the authority to make 
 
 ``Octavius is incredibly dangerous.  They will kill everyone.''
 
-``That brings me to another point.  I have a second request to make as well.  This deal is for Morgan.  SAC-09 has all the weapons.  We want access to those weapons and the industrial technology needed to produce those weapons.  No more of this tiny little trickle of information and tech.  The faucet will be turned on to full and the water best be hot.\footnote{\textbf{Suko T }I think Marechenko wins the Analogy War :) \textsubscript{07/28/14 4:45pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }Oh, so totally! They were slow to start, but he was definitely dominating the analogy field by the end of the conversation.  I hope Jonah just digs down further into that flaw of his. \textsubscript{07/28/14 10:24pm}}``  Marechenko gestures to the device.  ``If I see this in my mailbox, I will take it as a gesture of good faith.  In return, as a gesture of my good faith, the vote will go as agreed.\footnote{\textbf{Nathaniel Ford }He actually said that the vote would go as agreed. Jonah may not have noticed, but he avoided saying he would do anything, or that he knew anything, and except for a few instances left the vote as a hypothetical. \textsubscript{07/28/14 6:57pm}}\footnote{$\rightarrow$\textbf{Suko T }So cagey... smart man. \textsubscript{07/28/14 11:24pm}}''
+``That brings me to another point.  I have a second request to make as well.  This deal is for Morgan.  SAC-09 has all the weapons.  We want access to those weapons and the industrial technology needed to produce those weapons.  No more of this tiny little trickle of information and tech.  \hl{The faucet will be turned on to full and the water best be hot.}\footnote{\textbf{Suko T }I think Marechenko wins the Analogy War :) \textsubscript{07/28/14 4:45pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }Oh, so totally! They were slow to start, but he was definitely dominating the analogy field by the end of the conversation.  I hope Jonah just digs down further into that flaw of his. \textsubscript{07/28/14 10:24pm}}``  Marechenko gestures to the device.  ``If I see this in my mailbox, I will take it as a gesture of good faith.  \hl{In return, as a gesture of my good faith, the vote will go as agreed.}\footnote{\textbf{Nathaniel Ford }He actually said that the vote would go as agreed. Jonah may not have noticed, but he avoided saying he would do anything, or that he knew anything, and except for a few instances left the vote as a hypothetical. \textsubscript{07/28/14 6:57pm}}\footnote{$\rightarrow$\textbf{Suko T }So cagey... smart man. \textsubscript{07/28/14 11:24pm}}''
 
 ``Some have already capitulated to Octavius,'' warns Jonah.
 
@@ -735,29 +721,17 @@ Hayley 0
 
 \jumpHeadline{Quotes: }
 
+\quotedDialog{
 Bennett: One more thing.  Bring a message to Agent Morgan-
 
-Jaya: I'm an Agent, not a fucking courier service.
+Jaya: I'm an Agent, not a fucking courier service.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Jaya: Jesus Christ Hayley!  Your leg!  What the fuck is wrong with it?
 
 Hayley: It is psychosomatic.  It's all in my head.
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: I think Marechenko wins the Analogy War :) because:GivenExpectedThe faucet will be turned on to full and the water best be hot.The faucet must be turned on to full and the water better be hot.
-
-	Unable to highlight for footnote: He actually said that the vote would go as agreed. Jonah may not have noticed, but he avoided saying he would do anything, or that he knew anything, and except for a few instances left the vote as a hypothetical. because:GivenExpectedIn return, as a gesture of my good faith, the vote will go as agreed.In return, as a gesture of my good faith, I will place my vote as agreed.
-
-
-\fi
+}
 
 \vspace{\fill}
 
