Ch29 quote, highlight cleanups

--- a/4T/ch29.tex
+++ b/4T/ch29.tex
@@ -1,19 +1,13 @@
 \setcounter{chapter}{ 28 }
-\chapter{\textbf{``Terminus Rising''} }
+\chapter{\textbf{``Terminus Rising'', part 3} }
 
 
 
 
-\begin{center}
- {\LARGE \textbf{(part 3)} } 
-\end{center}
+\subChapterTitle{``Secret Agentman''}
 
 
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} Aug 6th, 2014
+\deets{Suko}{Aug 6th, 2014}
 
 
 
@@ -185,7 +179,7 @@ Jaya nods.  Hayley moves to interpose herself protectively between the three of 
 
 \sceneHeadline{Transit Authority HQ}
 
-We approach the TA Agent HQ\footnote{\textbf{Nathaniel Ford }Note that this is the TA Agent HQ, not the TA HQ, which is a bit more decentralized or more accurately places as the Security Triumvirate. \textsubscript{08/11/14 9:58am}} building.  It has been riot-proofed and somewhat upgraded.  Jonah is very nervous and some of it is leaking through to Jaya.  {[}\textit{Challenge 1 Notice.  Streetwise 1 (Jonah) → Matched}{]}.  Jonah notices that there are people up on the\hl{roofs of nearby buildings}\footnote{\textbf{Nathaniel Ford }Important to note the people in question were in nearby buildings, not TA HQ. \textsubscript{08/11/14 9:57am}}.
+We approach the \hl{TA Agent HQ}\footnote{\textbf{Nathaniel Ford }Note that this is the TA Agent HQ, not the TA HQ, which is a bit more decentralized or more accurately places as the Security Triumvirate. \textsubscript{08/11/14 9:58am}} building.  It has been riot-proofed and somewhat upgraded.  Jonah is very nervous and some of it is leaking through to Jaya.  {[}\textit{Challenge 1 Notice.  Streetwise 1 (Jonah) → Matched}{]}.  Jonah notices that there are people up on the\hl{roofs of nearby buildings}\footnote{\textbf{Nathaniel Ford }Important to note the people in question were in nearby buildings, not TA HQ. \textsubscript{08/11/14 9:57am}}.
 
 
 
@@ -351,7 +345,7 @@ Hayley coughs again, more loudly.  Jonah looks annoyed.
 
 ``Ah...Langdon,'' says Vogel.
 
-``Officer Oliver Langdon,'' \hl{corrects Jaya.}\footnote{\textbf{Suko T }!!!  She really does care :) \textsubscript{08/10/14 1:07am}}\_Marked as resolved\_\_Re-opened\_\footnote{$\rightarrow$\textbf{Adam Kenney }Yes, she said his name correctly - wow! \textsubscript{12/02/14 6:13pm}}
+``Officer Oliver Langdon,'' \hl{corrects Jaya.}\footnote{\textbf{Suko T }!!!  She really does care :) \textsubscript{08/10/14 1:07am}}\footnote{$\rightarrow$\textbf{Adam Kenney }Yes, she said his name correctly - wow! \textsubscript{12/02/14 6:13pm}}
 
 ``Operator,'' prompts Hayley from over by the door.
 
@@ -652,17 +646,18 @@ Jaya 0
 
 
 \jumpHeadline{Quotes: }
-
+\quotedDialog{
 Jaya: ``I hate Octavius.  They killed Oliver.''
 
-Nate: ``Whom you didn't like until that moment.''
+Nate: ``Whom you didn't like until that moment.'' \\[4mm]
+}
 
-
+\quotedDialog{
 
 Suko: ``Her ego precedes her down the hall.''
 
 Nate: ``Jaya is not one to let her ego get too far ahead of herself.''
-
+}
 
 \iffalse
 
