Ch30 quote and highlight cleanup

--- a/4T/ch30.tex
+++ b/4T/ch30.tex
@@ -1,19 +1,10 @@
 \setcounter{chapter}{ 29 }
-\chapter{\textbf{``Terminus Rising''} }
+\chapter{\textbf{``Terminus Rising'', part 4} }
 
 
+\subChapterTitle{``Sissorkicking Grenades''}
 
-
-\begin{center}
- {\LARGE \textbf{(part 4)} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} Aug 13th, 2014
+\deets{Suko}{Aug 13th, 2014}
 
 
 
@@ -202,7 +193,7 @@ Jaya disappears into the second floor and starts heading downstairs.  Hayley sur
 
 ``Looks pretty good, I think we're about to head out and go around to that building.  I'll keep you updated.''
 
-``Please do. Thank you, Sir.''\footnote{\textbf{Suko T }I don't know how obvious it was, but after the explosion, Hayley's demeanor changed from the weepy mess she's been the last few sessions.  Her movements are confident and assured, her voice calm and professional.  There is not a moment of hesitation when she shoots the guys.  All that Small Unit Tactics training that Rook drilled into the team is coming into fruition now.  Also, she doesn't limp at all. \textsubscript{08/14/14 6:22pm}}
+\hl{``Please do. Thank you, Sir.''}\footnote{\textbf{Suko T }I don't know how obvious it was, but after the explosion, Hayley's demeanor changed from the weepy mess she's been the last few sessions.  Her movements are confident and assured, her voice calm and professional.  There is not a moment of hesitation when she shoots the guys.  All that Small Unit Tactics training that Rook drilled into the team is coming into fruition now.  Also, she doesn't limp at all. \textsubscript{08/14/14 6:22pm}}
 
 
 
@@ -308,8 +299,7 @@ REBECCAxxBEGINxxHIGHLIGHTxx``Yeah well I was expecting....'' says Jaya and she l
 
 Jaya offers her a cigarette.  Vogel takes it and says ``I quit'' while tucking it into her pocket.
 
-``Yeah I quit every day too,'' says Jaya nodding in understanding.xxENDxxHIGHLIGHT\footnote{\textbf{Suko T }I really loved this bit. \textsubscript{08/15/14 2:57am}}\_Marked as resolved\_\_Re-opened\_
-
+``Yeah I quit every day too,'' says Jaya nodding in understanding.xxENDxxHIGHLIGHT\footnote{\textbf{Suko T }I really loved this bit. \textsubscript{08/15/14 2:57am}}
 Vogel and Lorentz leave.
 
 
@@ -603,34 +593,18 @@ Jonah 2
 
 
 \jumpHeadline{Quotes: }
-
+\quotedDialog{
 Jaya: We do have Trenton and he's good at these things even if he is an asshole.
 
-Lorentz: Assholes are often the most effective ones at their job.
+Lorentz: Assholes are often the most effective ones at their job.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Jaya: Whatever. All the Senators are assholes.  Aren't they?
 
 Rook: I don't usually classify people by their bodily vacancies
+}
 
-
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: I don’t know how obvious it was, but after the explosion, Hayley’s demeanor changed from the weepy mess she’s been the last few sessions.  Her movements are confident and assured, her voice calm and professional.  There is not a moment of hesitation when she shoots the guys.  All that Small Unit Tactics training that Rook drilled into the team is coming into fruition now.  Also, she doesn’t limp at all. because:GivenExpected“Please do. Thank you, Sir.”“Thank you, Sir.”
-
-	Unable to find a matching comment for footnote: _Marked as resolved_
-
-	Unable to find a matching comment for footnote: _Re-opened_
-
-
-\fi
 
 \vspace{\fill}
 
