Ch33 highlight and formatting clenaups

--- a/4T/ch33.tex
+++ b/4T/ch33.tex
@@ -1,24 +1,9 @@
 \setcounter{chapter}{ 32 }
-\chapter{\textbf{``SAC-04''} }
+\chapter{\textbf{``SAC-04'', part 1} }
 
+\subChapterTitle{``Grave Rot'')} 
 
-
-
-\begin{center}
- {\LARGE \textbf{(part 1)} } 
-\end{center}
-
-
-\begin{center}
- {\LARGE \textbf{(aka. ``Grave Rot'')} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} Sept 24th, 2014
+\deets{Suko}{Sept 24th, 2014}
 
 
 
@@ -102,7 +87,7 @@ Jaya is hanging out in Medbay.  Jayce comes in a few minutes later.  Swan takes 
 
 Dr. Gerhauser says, ``Colloquially it's called grave rot.  I don't know what you got into-''
 
-``It was just a small pile of bodies!'' Jaya protests.  ``I was only in them for five, \textit{maybe} twenty minutes.  \footnote{\textbf{Suko T }Jaya is so awesome. \textsubscript{09/30/14 11:30pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }She really is. \textsubscript{10/01/14 12:15am}}I didn't want to be there.''
+\hl{``It was just a small pile of bodies!'' Jaya protests.  ``I was only in them for five, \textit{maybe} twenty minutes.}  \footnote{\textbf{Suko T }Jaya is so awesome. \textsubscript{09/30/14 11:30pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }She really is. \textsubscript{10/01/14 12:15am}}I didn't want to be there.''
 
 ``I make no judgement,'' says Dr. Gerhauser, ``but you need to take the antibiotics.  It's a five day course.''
 
@@ -385,7 +370,7 @@ I'm guessing it \_is\_ a reaction to the uniform, and the fact that they heard t
 
 \textless more talking and awkward silences\textgreater 
 
-``I don't really understand you,'' says Jonah.  ``You're going to want a straight answer and I'm not going to give you one because I don't know how you're going to react to my answer\footnote{\textbf{q.google }It's almost as hard for Jonah to say this as it is easy for Hayley to understand why he's saying it.
+``I don't really understand you,'' says Jonah.  ``\hl{You're going to want a straight answer and I'm not going to give you one because I don't know how you're going to react to my answer}\footnote{\textbf{q.google }It's almost as hard for Jonah to say this as it is easy for Hayley to understand why he's saying it.
 
 Almost. \textsubscript{10/05/14 2:08pm}}.''
 
@@ -596,7 +581,7 @@ Besides, I don't know about you, but for me most of the fun of a story is gettin
 
 Hayley nods.
 
-``So they can be reasoned with?'' asks Jonah''\footnote{\textbf{q.google }That's not a hint.  Nope.  Not a hint at all.  Really. \textsubscript{10/05/14 2:56pm}}.  
+\hl{``So they can be reasoned with?'' asks Jonah''}\footnote{\textbf{q.google }That's not a hint.  Nope.  Not a hint at all.  Really. \textsubscript{10/05/14 2:56pm}}.  
 
 ``Possibly,'' says Rook.
 
@@ -1150,7 +1135,7 @@ Hayley offers the Omen the gruel, and he eats slowly, without enthusiasm.
 
 ``Listen, listen,'' says loincloth guy. ``Listen. No one listens.''
 
-``Where are we \textit{not} supposed to go?'' asks Jaya.\footnote{\textbf{Suko T }So clever! \textsubscript{09/30/14 11:59pm}}  The guy points down the path.
+\hl{``Where are we \textit{not} supposed to go?'' asks Jaya.}\footnote{\textbf{Suko T }So clever! \textsubscript{09/30/14 11:59pm}}  The guy points down the path.
 
 ``Okay, we're moving out!'' and Jaya points in the direction that the guy pointed.
 
@@ -1257,25 +1242,6 @@ Jonah 0
 
 ``He used to be muscle-y until our world expanded to include...Drake.'' \hl{-Rebecca}\footnote{\textbf{Rebecca S. }you have the audio of the session so I guess you have to be right-- I thought Nate said that though \textsubscript{10/01/14 9:18am}}\footnote{$\rightarrow$\textbf{Suko T }*technically* you just made a very clear ``Drake'' gesture and I said his actual name, but I didn't think the fine point of that was worth spelling out.  But yes, you really did say this. :) Nate had the lead-in line about how we went from most muscles to not muscle-y at all and back to second-most muscles. :D \textsubscript{10/01/14 11:04am}} (referring to Javier)
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Jaya is so awesome., unable to correctly match (exceeded acceptable limit):Expected“It was just a small pile of bodies!” Jaya protests.  “I was only in them for five, maybe twenty minutes.
-
-	Unable to highlight for footnote: It's almost as hard for Jonah to say this as it is easy for Hayley to understand why he's saying it.
-
-Almost. because:GivenExpectedYou’re going to want a straight answer and I’m not going to give you one because I don’t know how you’re going to react to my answerYou’re going to want a straight answer and I’m not going to give you one because I’m don’t know how you’re going to react to my answer
-
-	Unable to highlight for footnote: That's not a hint.  Nope.  Not a hint at all.  Really. because:GivenExpected”So they can be reasoned with?” asks Jonah”So they can be reasoned with?” asks Jonah
-
-	Unable to highlight for footnote: So clever!, unable to correctly match (exceeded acceptable limit):Expected“Where are we not supposed to go?” asks Jaya.
-
-
-\fi
 
 \vspace{\fill}
 
