Ch34 comment, highlight, and quote cleanup

--- a/4T/ch34.tex
+++ b/4T/ch34.tex
@@ -1,24 +1,9 @@
 \setcounter{chapter}{ 33 }
-\chapter{\textbf{``SAC-04''} }
+\chapter{\textbf{``SAC-04'', part 2} }
 
+\subChapterTitle{``Red Shirts in the Mist''} 
 
-
-
-\begin{center}
- {\LARGE \textbf{(part 2)} } 
-\end{center}
-
-
-\begin{center}
- {\LARGE \textbf{(aka. ``Red Shirts in the Mist'')} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} Oct 8th, 2014
+\deets{Suko}{Oct 8th, 2014}
 
 
 
@@ -396,7 +381,7 @@ While this is going on, Hayley goes to vomit in the bushes somewhere, as politel
 
 
 
-The skinny guy wails and moans, ``Remember.  I'll remember.....HA!  Stay in the world-moment.  Noooo.....'' as we leave.  Jaya watches him through her binoculars.  The mist is definitely gaining on us.  The guy wanders around the stake, he doesn't seem to be trying to escape.  The mist envelops the guy and we hear the occasional lonely ``HA!'' echo up the path.\footnote{\textbf{Suko T }Awww.... \textsubscript{10/10/14 11:54am}}  Jaya switches to the thermal sensors on her helmet and watches what happens to the guy.
+The skinny guy wails and moans, ``Remember.  I'll remember.....HA!  Stay in the world-moment.  Noooo.....'' as we leave.  Jaya watches him through her binoculars.  The mist is definitely gaining on us.  \hl{The guy wanders around the stake, he doesn't seem to be trying to escape.  The mist envelops the guy and we hear the occasional lonely ``HA!'' echo up the path.}\footnote{\textbf{Suko T }Awww.... \textsubscript{10/10/14 11:54am}}  Jaya switches to the thermal sensors on her helmet and watches what happens to the guy.
 
 The guy is kneeling on the ground with his arms above him and then his arms drop.  His body seems to float up into the air and then it just...fades away.
 
@@ -850,7 +835,7 @@ We start heading toward the city.  There is a long low wall with a door in it.  
 
 ``Chief, what do you see?'' asks Jonah.
 
-``The fucking door in the wall!'' Jaya pauses and blinks.  ``I mean, there \textit{is} a door, right?''\textless 3
+``The fucking door in the wall!'' Jaya pauses and blinks.  \hl{``I mean, there \textit{is} a door, right?''}\footnote{\textbf{Suko T }\textless 3 \textsubscript{10/10/14 12:25pm}}
 
 ``Yes, just look through the door when you get a chance.''``Don't tell me how to do my job!'' Jaya snaps at Jonah.  
 
@@ -984,69 +969,57 @@ Jonah 4
 
 \jumpHeadline{Quotes: }
 
-Ion:\hl{``We got taken out by...elevation.''}\footnote{\textbf{Nathaniel Ford }\textless 3 \textsubscript{10/10/14 2:41pm}}
+Ion:\hl{``We got taken out by...elevation.''}\footnote{\textbf{Nathaniel Ford }\textless 3 \textsubscript{10/10/14 2:41pm}}\\[4mm]
 
 
-
+\quotedDialog{
 Suko: ``See we could have gotten everyone up the mountain!  Just take a 5 point Flaw 'Saved by Drake''' 
 
-Rebecca: ``No.  NO.  I'd rather shoot them in the head.''
+Rebecca: ``No.  NO.  I'd rather shoot them in the head.''\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rebecca: ``Does she feel better?''
 
-Nate: ``Imagine that there was a great injustice.  A force oppressing many people.  Innocent people dying. And a monsoon of fire washes over it...surrounding it...drowning....collapsing into a perfect waveform of nougat-y goodness...why nougat-y?  fuck it.  Which you then swallow.  And your body just feels like...\textit{Yeah} motherfuckers.  Let's rock.''\textless 3
+\hl{Nate: ``Imagine that there was a great injustice.  A force oppressing many people.  Innocent people dying. And a monsoon of fire washes over it...surrounding it...drowning....collapsing into a perfect waveform of nougat-y goodness...why nougat-y?  fuck it.  Which you then swallow.  And your body just feels like...\textit{Yeah} motherfuckers.  Let's rock.''}\footnote{\textbf{Suko T }\textless 3 \textsubscript{10/10/14 12:25pm}}\\[4mm]
+}
 
-
-
+\quotedDialog{
 Ion: We don't even know if the fog stopped.
 
 Suko: Drake said it did, so it did.
 
-Rebecca: Yeeaaah....there's going to be some re-education camp when we get back home...
+Rebecca: Yeeaaah....there's going to be some re-education camp when we get back home...\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rebecca: Basically we don't have to worry about anything but what's in front of us.
 
 Ion: I think you're misunderstanding the use of red shirts here.  'Keep them back there where it's safe'?
 
 Suko: Well we already lost \hl{three}\footnote{\textbf{Suko T }Actually four at that point but I can't count. \textsubscript{10/10/14 12:32pm}} of them, we don't have many left.
 
-Rebecca: I'm so sad about Morley.
+Rebecca: I'm so sad about Morley.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Ion: I will make sure they don't get instantly immolated.
 
-Suko: How are you doing that?Ion: By keeping back and watching.
+Suko: How are you doing that?
 
-Nate: That's science!
+Ion: By keeping back and watching.
 
+Nate: That's science!\\[4mm]
+}
 
-
+\quotedDialog{
 Suko: See??  Pistols are comforting.  Rifles are comforting...
 
 Rebecca: Yeah.
 
 Suko: \hl{You understand.  It's a girl thing.}\footnote{\textbf{Nathaniel Ford }Lulz! I didn't hear this. That's awesome. \textsubscript{10/10/14 2:43pm}}
+}
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Awww.... because:GivenExpectedThe guy wanders around the stake, he doesn’t seem to be trying to escape.  The mist envelops the guy and we hear the occasional lonely “HA!” echo up the path.The guy wanders around the stake, he doesn’t seem to be trying to escape.  The mist envelops the guy and we hear the occasional lonely “HA!” through the mist.
-
-	Unable to understand footnote <3, too many options & none that matched  a door, right?”. Optional comment markups: \footnote{\textbf{Nathaniel Ford }<3 \textsubscript{10/10/14 2:41pm}}\footnote{\textbf{Suko T }<3 \textsubscript{10/10/14 12:31pm}}\footnote{\textbf{Suko T }<3 \textsubscript{10/10/14 12:25pm}} 
-
-	Unable to understand footnote <3, too many options & none that matched  motherfuckers.  Let’s rock.”. Optional comment markups: \footnote{\textbf{Nathaniel Ford }<3 \textsubscript{10/10/14 2:41pm}}\footnote{\textbf{Suko T }<3 \textsubscript{10/10/14 12:31pm}}\footnote{\textbf{Suko T }<3 \textsubscript{10/10/14 12:25pm}} 
-
-
-\fi
 
 \vspace{\fill}
 
