--- a/4T/ch37.tex
+++ b/4T/ch37.tex
@@ -3,17 +3,9 @@
 
 
 
+\subChapterTitle{``Eating Crow'')} 
 
-\begin{center}
- {\LARGE \textbf{(aka. ``Eating Crow'')} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} Nov 19th, 2014
+\deets{Suko}{Nov 19th, 2014}
 
 
 
@@ -511,7 +503,7 @@ Hayley strips down to her underwear, carefully folding her uniform and putting i
 
 Jonah wakes first.  His dreams had been intense and disjointed. There's a lot of images that don't make sense to him.  It's weird but not uncomfortable.  
 
-Through the comm, Hekate says, ``Are you awake?  Your baselines are good.  You are free on your own recognizance.  If find yourself suffering from any medical symptoms that are abnormal, please contact me immediately.''\footnote{\textbf{Rebecca S. }I assumed through this whole scene that Dr. Gerhauser was watching everything on a security cam in her office, being mildly pissed off. \textsubscript{12/02/14 7:55am}}
+\hl{Through the comm, Hekate says, ``Are you awake?  Your baselines are good.  You are free on your own recognizance.  If find yourself suffering from any medical symptoms that are abnormal, please contact me immediately.''}\footnote{\textbf{Rebecca S. }I assumed through this whole scene that Dr. Gerhauser was watching everything on a security cam in her office, being mildly pissed off. \textsubscript{12/02/14 7:55am}}
 
 Jonah is still a little bleary but eventually climbs out of the tank.  He moves slowly and is trying to get his bearings.
 
@@ -1679,69 +1671,54 @@ One of the figures hawks, spits something disgusting on the floor and growls, ``
 
 \jumpHeadline{Quotes: }
 
-Ion: Being ``In the Tank'' in this game is a totally different thing to us.
 
+Ion: Being ``In the Tank'' in this game is a totally different thing to us.\\[4mm]
 
-
+\quotedDialog{
 Nate: It doesn't seem possible but Signe's grin gets even wider.  It looks especially weird through the distortion of the glass.
 
-Suko: Hot.
+Suko: Hot.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Nate: Signe mouths,  ``I am going to eat your face.''  Well, maybe it's hard to tell exactly what she said, but you're pretty sure the words ``I am going to eat...something'' are directed at you and definitely-
 
 \hl{Suko: Jaya knows smack talk and bitch-speak.  She knows.}\footnote{\textbf{Rebecca S. }:D  I'd forgotten this. So good! \textsubscript{12/02/14 8:41am}}
 
-Rebecca: Very fluent.
+Rebecca: Very fluent.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Ion: I should have asked for a hazard bonus.
 
 Nate: You aren't nearly as aggressive about that as Jaya.
 
-Suko: Yeah you really needed to negotiate that before you said yes.  All you asked for was more training and schooling?  What is up with that, Jonah?
+Suko: Yeah you really needed to negotiate that before you said yes.  All you asked for was more training and schooling?  What is up with that, Jonah?\\[4mm]
+}
 
-
-
+\quotedDialog{
 Nate: So there you are with three women.
 
 Rebecca: Naked and in a bathrobe.
 
-Ion: And passing out at the wrong end of things.
+Ion: And passing out at the wrong end of things.\\[4mm]
+}
+
+Suko: Cyber uterus!\\[4mm]
 
 
-
-Suko: Cyber uterus!
-
-
-
+\quotedDialog{
 Dr. Gerhauser: How much do you know about how pregnancy works?
 
 Jaya: I dunno.  You put the thing in \textless Jaya makes a very specific gesture\textgreater  And the thing comes out.
 
-Dr. Gerhauser: So... essentially nothing.
+Dr. Gerhauser: So... essentially nothing.\\[4mm]
+}
 
-
-
-Dr. Gerhauser: Why do you insist on trying to negotiate with the laws of physics?
-
-
+Dr. Gerhauser: Why do you insist on trying to negotiate with the laws of physics?\\[4mm]
 
 Dr. Gerhauser: Honey, feelings are always scary.  And whenever possible, you should avoid them.  That's just advice from me to you.
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: I assumed through this whole scene that Dr. Gerhauser was watching everything on a security cam in her office, being mildly pissed off. because:GivenExpectedThrough the comm, Hekate says, “Are you awake?  Your baselines are good.  You are free on your own recognizance.  If find yourself suffering from any medical symptoms that are abnormal, please contact me immediately.”Through the comm, Hecate says, “Are you awake?  Your baselines are good.  You are free on your own recognizance.  If find yourself suffering from any medical symptoms that are abnormal, please contact me immediately.”
-
-
-\fi
 
 \vspace{\fill}
 
